// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`getArrowStyles Get a correct arrow hover styles with background, shadow and border custom colors 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(0px 0px 0px rgb(6,147,227))",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "border-color": "rgb(6,147,227)",
      },
      "l": Object {
        "border-color": "rgb(6,147,227)",
      },
      "m": Object {
        "border-color": "rgb(6,147,227)",
      },
      "s": Object {
        "border-color": "rgb(6,147,227)",
      },
      "xl": Object {
        "border-color": "rgb(6,147,227)",
      },
      "xs": Object {
        "border-color": "rgb(6,147,227)",
      },
      "xxl": Object {
        "border-color": "rgb(6,147,227)",
      },
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(1px 2px 1px rgb(255, 99, 71))",
      },
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(6,147,227)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "l": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "m": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "s": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "xl": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "xs": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "xxl": Object {
        "border-color": "rgb(255, 99, 71)",
      },
    },
  },
  ":hover .maxi-container-arrow:before": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
}
`;

exports[`getArrowStyles Get a correct arrow styles 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {},
  },
  " .maxi-container-arrow .maxi-container-arrow--content": Object {
    "arrow": Object {
      "general": Object {
        "display": "block",
        "height": "2px",
        "left": "1%",
        "top": "-1.4142135623730951px",
        "width": "2px",
      },
      "l": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "-0.7071067811865476px",
        "width": "1px",
      },
      "m": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "calc(100% + 3px)",
        "width": "3px",
      },
      "s": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "calc(100% + 1px)",
        "width": "1px",
      },
      "xl": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "-2.121320343559643px",
        "width": "3px",
      },
      "xs": Object {
        "display": "block",
        "height": "3px",
        "left": "2%",
        "top": "calc(100% + 3px)",
        "width": "3px",
      },
      "xxl": Object {
        "display": "block",
        "height": "1px",
        "left": "4%",
        "top": "-0.7071067811865476px",
        "width": "1px",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "l": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "m": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "s": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "xl": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "xs": Object {
        "border-color": "rgb(255, 99, 71)",
      },
      "xxl": Object {
        "border-color": "rgb(255, 99, 71)",
      },
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgb(255, 99, 71)",
      },
      "label": "Arrow Color",
    },
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
}
`;

exports[`getArrowStyles Get a correct palette colors arrow hover styles 1`] = `
Object {
  " .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(0px 0px 0px rgba(var(--maxi-light-color-2), 0.2))",
      },
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
  },
  " .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  " .maxi-container-arrow:before": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-5), 1)",
      },
      "label": "Arrow Color",
    },
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow": Object {
    "shadow": Object {
      "general": Object {
        "filter": "drop-shadow(1px 2px 1px rgba(var(--maxi-light-color-4), 0.2))",
      },
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:after": Object {
    "background": Object {
      "general": Object {
        "background-color": "rgba(var(--maxi-light-color-1), 1)",
      },
      "label": "Arrow Color",
    },
  },
  ":hover .maxi-container-arrow .maxi-container-arrow--content:before": Object {
    "border": Object {
      "general": Object {
        "height": "calc(50% + 6px)",
        "left": "calc(1.5px)",
        "top": "calc(1.5px)",
        "width": "calc(50% + 6px)",
      },
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
  ":hover .maxi-container-arrow:before": Object {
    "border": Object {
      "general": Object {},
      "l": Object {},
      "m": Object {},
      "s": Object {},
      "xl": Object {},
      "xs": Object {},
      "xxl": Object {},
    },
  },
}
`;
